@@ -4,7 +4,7 @@ use strict;
 Module::Build->new(
     module_name        => 'SVN::Notify::Filter::Markdown',
     license            => 'perl',
-    create_makefile_pl => 'passthrough',
+    create_makefile_pl => 'traditional',
     configure_requires => { 'Module::Build' => '0.2701' },
     build_requires     => {
         'Test::More'    => '0.17',
@@ -12,7 +12,7 @@ Module::Build->new(
     },
     requires           => {
         'SVN::Notify'    => '2.70',
-        'Text::Markdown' => '1.0.4',
+        'Text::Markdown' => '1.000004',
         'HTML::Entities' => 0,
     },
     recommends         => {
