@@ -1,34 +1,18 @@
 # Note: this file was auto-generated by Module::Build::Compat version 0.3603
-
-    unless (eval "use Module::Build::Compat 0.02; 1" ) {
-      print "This module requires Module::Build to install itself.\n";
-
-      require ExtUtils::MakeMaker;
-      my $yn = ExtUtils::MakeMaker::prompt
-	('  Install Module::Build now from CPAN?', 'y');
-
-      unless ($yn =~ /^y/i) {
-	die " *** Cannot install without Module::Build.  Exiting ...\n";
-      }
-
-      require Cwd;
-      require File::Spec;
-      require CPAN;
-
-      # Save this 'cause CPAN will chdir all over the place.
-      my $cwd = Cwd::cwd();
-
-      CPAN::Shell->install('Module::Build::Compat');
-      CPAN::Shell->expand("Module", "Module::Build::Compat")->uptodate
-	or die "Couldn't install Module::Build, giving up.\n";
-
-      chdir $cwd or die "Cannot chdir() back to $cwd: $!";
-    }
-    eval "use Module::Build::Compat 0.02; 1" or die $@;
-    
-    Module::Build::Compat->run_build_pl(args => \@ARGV);
-    my $build_script = 'Build';
-    $build_script .= '.com' if $^O eq 'VMS';
-    exit(0) unless(-e $build_script); # cpantesters convention
-    require Module::Build;
-    Module::Build::Compat->write_makefile(build_class => 'Module::Build');
+use ExtUtils::MakeMaker;
+WriteMakefile
+(
+          'NAME' => 'SVN::Notify::Filter::Markdown',
+          'VERSION_FROM' => 'lib/SVN/Notify/Filter/Markdown.pm',
+          'PREREQ_PM' => {
+                           'HTML::Entities' => 0,
+                           'Module::Build' => '0.2701',
+                           'SVN::Notify' => '2.70',
+                           'Test::More' => '0.17',
+                           'Text::Markdown' => '1.000004'
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [],
+          'PL_FILES' => {}
+        )
+;
